adding pyarbus simple pyarbus builder

--- a/master.cfg
+++ b/master.cfg
@@ -491,6 +491,10 @@ nitime_arokem_bot = GithubBot('arokem','nitime',
     test_cmd = nptest_command('nitime', verbose=None),
     pip_depends = ('nose',)
 )
+pyarbus_bot = GithubBot('ivanov', 'pyarbus',
+    test_cmd = nptest_command('pyarbus', verbose=None),
+    pip_depends = ('nose','nitime')
+)
 nipy_bot = GithubBot('nipy', 'nipy',
     test_cmd = nptest_command('nipy', doctests=True),
     doc_build_cmd = "cd doc && make dist",
@@ -583,6 +587,7 @@ sympy_bot = GithubBot('sympy', 'sympy',
 # commits http://buildbot.net/buildbot/docs/latest/manual/cfg-changesources.html#chsrc-PBChangeSource
 c['change_source'] = [bot.poller() for bot in (nibabel_bot,
                                                nitime_bot,
+                                               pyarbus_bot,
                                                nipy_bot,
                                                dipy_bot,
                                                nipype_bot,
@@ -636,6 +641,8 @@ c['schedulers'] = [
                           'nitime-py2.6-osx-10.5-ppc',
                           'nitime-py2.6-osx-10.5-intel',
                          ]),
+    pyarbus_bot.scheduler(['pyarbus-py2.6',
+                          ]),
     nipy_bot.scheduler(['nipy-py2.6',
                         'nipy-py2.6-32',
                         'nipy-py2.6-xp',
@@ -1130,6 +1137,9 @@ c['builders'] += nitime_arokem_bot.build_builders(
      ('nitime-py2.6-arokem-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nitime-py2.6-arokem-osx-10.5-intel', osx_leopard_intel_slaves),
      ('nitime-py2.6-arokem-xp', xp_32_slaves)))
+# pyarbus
+c['builders'] += pyarbus_bot.build_builders(
+    (('pyarbus-py2.6', linux_64_slaves),))
 c['builders'] += nipy_bot.build_builders(
     (('nipy-py2.6', linux_64_slaves),
      ('nipy-py2.6-32', linux_32_slaves),
