adding use_agg flag to np_test command

--- a/master.cfg
+++ b/master.cfg
@@ -462,11 +462,14 @@ def nptest_command(pkg_name,
                    python='python',
                    cd=False,
                    stdout=False,
-                   exe=False):
+                   exe=False,
+                   use_agg=False):
     """ Run tests from new directory """
     pystr = ''
     if cd:
         pystr += "import os; os.chdir('..');"
+    if use_agg:
+        pystr += 'import os; open("matplotlibrc", "wt").write("backend : agg"); '
     pystr += ("import sys; import %s; sys.exit(not %s.test(doctests=%s"
               % (pkg_name, pkg_name, doctests))
     if verbose != None:
@@ -492,7 +495,7 @@ nitime_arokem_bot = GithubBot('arokem','nitime',
     pip_depends = ('nose',)
 )
 pyarbus_bot = GithubBot('ivanov', 'pyarbus',
-    test_cmd = nptest_command('pyarbus', verbose=None),
+    test_cmd = nptest_command('pyarbus', verbose=None, use_agg=True),
     pip_depends = ('nose','nitime')
 )
 nipy_bot = GithubBot('nipy', 'nipy',
