Make eggs appear as binary files on webserver

--- a/master.cfg
+++ b/master.cfg
@@ -1357,3 +1357,7 @@ c['buildbotURL'] = "http://nipy.bic.berkeley.edu/"
 # installations.
 c['db_url'] = "sqlite:///state.sqlite"
 
+# Set mime types for server serving non buildbot files
+from twisted.web.static import File
+webdir = File("public_html")
+webdir.contentTypes['.egg'] = 'application/octet-stream'
