Add timeout to SymPy slow tests

--- a/master.cfg
+++ b/master.cfg
@@ -564,7 +564,7 @@ sympy_bot = GithubBot('sympy', 'sympy',
     'open("matplotlibrc", "wt").write("backend : agg"); '
     'dt=sympy.doctest(); '
     't=sympy.test(); '
-    'st=sympy.test(slow=True, verbose=True); '
+    'st=sympy.test(slow=True, verbose=True, timeout=2300); '
     'sys.exit(not (dt and t and st))'],
     doc_build_cmd = "make html-errors",
     pip_depends = (
