RF: increase sympy timeout

--- a/master.cfg
+++ b/master.cfg
@@ -578,7 +578,7 @@ sympy_bot = GithubBot('sympy', 'sympy',
         'gmpy==1.16',
         ('--no-deps', 'https://github.com/Theano/Theano/archive/master.zip')),
     doc_pip_depends = ('sphinx==1.1.3',),
-    # build_timeout = 28800, # allow for very slow sympy tests
+    build_timeout = 2400, # allow for very slow sympy tests
 )
 
 ####### CHANGESOURCES
