BF: make pip install environment more bare
Don't install dependencies for pip install tests, so we check whether these are
installed by pip correctly.

--- a/master.cfg
+++ b/master.cfg
@@ -1075,6 +1075,8 @@ for bot in (nibabel_bot, nipy_bot, dipy_bot):
             c['builders'] += bot.build_builders(
                 ((builder_name, osx_mountainlion_slaves),),
                 python='python' + pyver,
+                easy_depends = (), # Turn off dependency install
+                pip_depends = ('nose',), # ditto
                 install_cmd = install_cmd,
                 install_wd = 'build/venv')
             c['schedulers'] += bot.nightly_scheduler(
