NF: sympy binary builders
With schedulers, as yet untested.

--- a/master.cfg
+++ b/master.cfg
@@ -780,6 +780,15 @@ c['schedulers'] = [
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.6'], 'dipy-egg-26', 3, 10, True),
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-2.7'], 'dipy-egg-27', 3, 20, True),
     dipy_bot.nightly_scheduler(['dipy-bdist-mpkg-3.3'], 'dipy-egg-33', 3, 30, True),
+    # Sympy binary builders
+    sympy_bot.nightly_scheduler(['sympy-bdist32-27'],
+                                  'exe-26', 5, 40, True),
+    sympy_bot.nightly_scheduler(['sympy-bdist32-33'],
+                                  'exe-33', 5, 50, True),
+    sympy_bot.nightly_scheduler(['sympy-bdist64-27'],
+                                  'exe64-27', 5, 41, True),
+    sympy_bot.nightly_scheduler(['sympy-bdist64-33'],
+                                  'exe64-33', 5, 51, True),
 ]
 
 # Some factories
@@ -1006,6 +1015,46 @@ c['builders'].append(BuilderConfig(
         'egg',
         test_cmd=osx_dipy_test_cmd,
         python='/Library/Frameworks/Python.framework/Versions/3.3/bin/python3')
+))
+# sympy binary builders
+sympy_test_cmd = ['python', '-c',
+                  'import sys; '
+                  'import sympy; '
+                  'open("matplotlibrc", "wt").write("backend : agg"); '
+                  'dt=sympy.doctest(); '
+                  't=sympy.test(); '
+                  'sys.exit(not (dt and t))']
+c['builders'].append(BuilderConfig(
+    name='sympy-bdist32-27',
+    slavenames=xp_32_slaves,
+    factory=sympy_bot.bdist_factory(
+        'exe',
+        test_cmd = nibabel_test_cmd,
+        python = r'c:\Python27\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='sympy-bdist32-33',
+    slavenames=xp_32_slaves,
+    factory=sympy_bot.bdist_factory(
+        'exe',
+        test_cmd = nibabel_test_cmd,
+        python = r'c:\Python33\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='sympy-bdist64-27',
+    slavenames=win7_64_slaves,
+    factory=sympy_bot.bdist_factory(
+        'exe',
+        test_cmd = nibabel_test_cmd,
+        python = r'c:\Python27\python.exe')
+))
+c['builders'].append(BuilderConfig(
+    name='sympy-bdist64-33',
+    slavenames=win7_64_slaves,
+    factory=sympy_bot.bdist_factory(
+        'exe',
+        test_cmd = nibabel_test_cmd,
+        python = r'c:\Python33\python.exe')
 ))
 # Add nightly docs builders
 c['builders'] += nipy_bot.build_doc_builders(
