RF: remove pip dependencies for sympy bdists

--- a/master.cfg
+++ b/master.cfg
@@ -1030,6 +1030,7 @@ c['builders'].append(BuilderConfig(
     factory=sympy_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
+        pip_depends = (),
         python = r'c:\Python27\python.exe')
 ))
 c['builders'].append(BuilderConfig(
@@ -1038,6 +1039,7 @@ c['builders'].append(BuilderConfig(
     factory=sympy_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
+        pip_depends = (),
         python = r'c:\Python33\python.exe')
 ))
 c['builders'].append(BuilderConfig(
@@ -1046,6 +1048,7 @@ c['builders'].append(BuilderConfig(
     factory=sympy_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
+        pip_depends = (),
         python = r'c:\Python27\python.exe')
 ))
 c['builders'].append(BuilderConfig(
@@ -1054,6 +1057,7 @@ c['builders'].append(BuilderConfig(
     factory=sympy_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
+        pip_depends = (),
         python = r'c:\Python33\python.exe')
 ))
 # Add nightly docs builders
