RF: add nose as a sympy bdist dependency

--- a/master.cfg
+++ b/master.cfg
@@ -1024,13 +1024,13 @@ sympy_test_cmd = ['python', '-c',
                   'dt=sympy.doctest(); '
                   't=sympy.test(); '
                   'sys.exit(not (dt and t))']
+pip_deps = ('nose',)
 c['builders'].append(BuilderConfig(
     name='sympy-bdist32-27',
     slavenames=xp_32_slaves,
     factory=sympy_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
-        pip_depends = (),
         python = r'c:\Python27\python.exe')
 ))
 c['builders'].append(BuilderConfig(
@@ -1039,7 +1039,7 @@ c['builders'].append(BuilderConfig(
     factory=sympy_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
-        pip_depends = (),
+        pip_depends = pip_deps,
         python = r'c:\Python33\python.exe')
 ))
 c['builders'].append(BuilderConfig(
@@ -1048,7 +1048,7 @@ c['builders'].append(BuilderConfig(
     factory=sympy_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
-        pip_depends = (),
+        pip_depends = pip_deps,
         python = r'c:\Python27\python.exe')
 ))
 c['builders'].append(BuilderConfig(
@@ -1057,7 +1057,7 @@ c['builders'].append(BuilderConfig(
     factory=sympy_bot.bdist_factory(
         'exe',
         test_cmd = nibabel_test_cmd,
-        pip_depends = (),
+        pip_depends = pip_deps,
         python = r'c:\Python33\python.exe')
 ))
 # Add nightly docs builders
