--- a/master.cfg
+++ b/master.cfg
@@ -1030,7 +1030,7 @@ c['builders'].append(BuilderConfig(
     slavenames=xp_32_slaves,
     factory=sympy_bot.bdist_factory(
         'exe',
-        test_cmd = nibabel_test_cmd,
+        test_cmd = sympy_test_cmd,
         python = r'c:\Python27\python.exe')
 ))
 c['builders'].append(BuilderConfig(
@@ -1038,7 +1038,7 @@ c['builders'].append(BuilderConfig(
     slavenames=xp_32_slaves,
     factory=sympy_bot.bdist_factory(
         'exe',
-        test_cmd = nibabel_test_cmd,
+        test_cmd = sympy_test_cmd,
         pip_depends = pip_deps,
         python = r'c:\Python33\python.exe')
 ))
@@ -1047,7 +1047,7 @@ c['builders'].append(BuilderConfig(
     slavenames=win7_64_slaves,
     factory=sympy_bot.bdist_factory(
         'exe',
-        test_cmd = nibabel_test_cmd,
+        test_cmd = sympy_test_cmd,
         pip_depends = pip_deps,
         python = r'c:\Python27\python.exe')
 ))
@@ -1056,7 +1056,7 @@ c['builders'].append(BuilderConfig(
     slavenames=win7_64_slaves,
     factory=sympy_bot.bdist_factory(
         'exe',
-        test_cmd = nibabel_test_cmd,
+        test_cmd = sympy_test_cmd,
         pip_depends = pip_deps,
         python = r'c:\Python33\python.exe')
 ))
