RF: update to 0.8.8 compatible imports

--- a/master.cfg
+++ b/master.cfg
@@ -1,4 +1,3 @@
-# -*- python -*-
 # ex: set syntax=python:
 # vim: ft=python
 # NIpy buildBOT Master Instance config
@@ -64,7 +63,8 @@ from buildbot.locks import MasterLock
 from buildbot.buildslave import BuildSlave
 from buildbot.changes.gitpoller import GitPoller
 from buildbot.schedulers.filter import ChangeFilter
-from buildbot.scheduler import Scheduler
+from buildbot.schedulers.forcesched import ForceScheduler
+from buildbot.schedulers.basic import SingleBranchScheduler
 from buildbot.schedulers import timed
 from buildbot.process.factory import BuildFactory
 from buildbot.steps.source import Git
@@ -202,10 +202,10 @@ class GithubBot(object):
         changefilter = ChangeFilter(repository=self.git_url,
                                     project=self.project,
                                     category=self.project)
-        return Scheduler(name=name,
-                        change_filter=changefilter,
-                        treeStableTimer=None,
-                        builderNames=buildernames)
+        return SingleBranchScheduler(name=name,
+                                     change_filter=changefilter,
+                                     treeStableTimer=None,
+                                     builderNames=buildernames)
 
     def nightly_scheduler(self,
                           buildernames,
@@ -490,10 +490,6 @@ nitime_bot = GithubBot('nipy', 'nitime',
     test_cmd = nptest_command('nitime', verbose=None),
     pip_depends = ('nose',)
 )
-nitime_arokem_bot = GithubBot('arokem','nitime',
-    test_cmd = nptest_command('nitime', verbose=None),
-    pip_depends = ('nose',)
-)
 pyarbus_bot = GithubBot('ivanov', 'pyarbus',
     test_cmd = nptest_command('pyarbus', verbose=None, use_agg=True),
     pip_depends = ('nose','nitime')
@@ -637,9 +633,11 @@ c['schedulers'] = [
     nitime_bot.scheduler(['nitime-py2.6',
                           'nitime-py2.6-32',
                           'nitime-py2.6-xp',
+                          'nitime-py2.6-arm',
                           'nitime-py2.7-fedora',
                           'nitime-py2.7-osx-10.4-ppc',
                           'nitime-py2.7-osx-10.6',
+                          'nitime-py2.7-osx-10.7',
                           'nitime-py2.7-osx-10.8',
                           'nitime-py2.6-osx-10.5-ppc',
                           'nitime-py2.6-osx-10.5-intel',
@@ -666,6 +664,8 @@ c['schedulers'] = [
     dipy_bot.scheduler(['dipy-py2.6',
                         'dipy-py2.6-32',
                         'dipy-py2.6-xp',
+                        'dipy-py2.6-sparc',
+                        'dipy-py2.6-arm',
                         'dipy-py2.7-fedora',
                         'dipy-py2.7-osx-10.6',
                         'dipy-py2.7-osx-10.7',
@@ -689,7 +689,7 @@ c['schedulers'] = [
                           'regreg-py2.6-32',
                           'regreg-py2.6-xp',
                           'regreg-py2.7-fedora',
-                          'regreg-py2.7-osx-10.8',
+                          'regreg-py2.7-osx-10.6',
                           'regreg-py2.7-osx-10.7',
                           'regreg-py2.7-osx-10.8',
                           'regreg-py2.7-osx-10.4-ppc',
@@ -717,6 +717,7 @@ c['schedulers'] = [
                         'pymvpa-py2.x-wheezy-sparc',
                         #'pymvpa-py3.x-wheezy-sparc',
                         'pymvpa-py2.7-osx-10.6',
+                        'pymvpa-py2.7-osx-10.7',
                         'pymvpa-py2.7-osx-10.8',
                         'pymvpa-py2.7-osx-10.4-ppc',
                         'pymvpa-py2.6-osx-10.5-ppc',
@@ -785,6 +786,11 @@ c['schedulers'] = [
                                   'exe-26', 5, 30, True),
     sympy_bot.nightly_scheduler(['sympy-bdist64-27'],
                                   'exe64-27', 5, 30, True),
+    # Force schedulers for stuff we don't have other schedulers for
+    ForceScheduler(name="dipy-release", builderNames=["dipy-release-checks"]),
+    ForceScheduler(name="nipy-release", builderNames=["nipy-release-checks"]),
+    ForceScheduler(name="nipy-examples",
+                   builderNames=["nipy-examples-2.6", 'nipy-examples-3.3']),
 ]
 
 # Some factories
@@ -1166,14 +1172,6 @@ c['builders'] += nitime_bot.build_builders(
      ('nitime-py2.6-arm', arm_slaves),
      ('nitime-py2.7-fedora', fedora_slaves),
      ('nitime-py2.6-xp', xp_32_slaves)))
-c['builders'] += nitime_arokem_bot.build_builders(
-    (('nitime-py2.6-arokem', linux_64_slaves),
-     ('nitime-py2.6-arokem-32', linux_32_slaves),
-     ('nitime-py2.7-arokem-osx-10.4-ppc', osx_tiger_ppc_slaves),
-     ('nitime-py2.7-arokem-osx-10.6', osx_snowleopard_slaves),
-     ('nitime-py2.6-arokem-osx-10.5-ppc', osx_leopard_ppc_slaves),
-     ('nitime-py2.6-arokem-osx-10.5-intel', osx_leopard_intel_slaves),
-     ('nitime-py2.6-arokem-xp', xp_32_slaves)))
 # pyarbus
 c['builders'] += pyarbus_bot.build_builders(
     (('pyarbus-py2.6', linux_64_slaves),))
@@ -1230,15 +1228,12 @@ c['builders'] += nipype_bot.build_builders(
     (('nipype-py2.6', linux_64_slaves),
      ('nipype-py2.6-32', linux_32_slaves),
      ('nipype-py2.7-osx-10.6', osx_snowleopard_slaves),
-     ('nipype-py2.7-osx-10.7', osx_lion_slaves),
      ('nipype-py2.7-osx-10.8', osx_mountainlion_slaves),
      ('nipype-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('nipype-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('nipype-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
-     ('nipype-py2.6-arm', arm_slaves),
      ('nipype-py2.7-fedora', fedora_slaves),
-     ('nipype-py2.6-xp', xp_32_slaves),
-     ('nipype-py2.6-sparc', sparc_slaves)))
+     ('nipype-py2.6-xp', xp_32_slaves)))
 c['builders'] += regreg_bot.build_builders(
     (('regreg-py2.6', linux_64_slaves),
      ('regreg-py2.6-32', linux_32_slaves),
@@ -1248,10 +1243,8 @@ c['builders'] += regreg_bot.build_builders(
      ('regreg-py2.7-osx-10.4-ppc', osx_tiger_ppc_slaves),
      ('regreg-py2.6-osx-10.5-ppc', osx_leopard_ppc_slaves),
      ('regreg-py2.6-osx-10.5-intel', osx_leopard_intel_slaves),
-     ('regreg-py2.6-arm', arm_slaves),
      ('regreg-py2.7-fedora', fedora_slaves),
-     ('regreg-py2.6-xp', xp_32_slaves),
-     ('regreg-py2.6-sparc', sparc_slaves)))
+     ('regreg-py2.6-xp', xp_32_slaves)))
 # Pandas - can be tested only on recent debian releases
 c['builders'] += pandas_bot.build_builders(
     (('pandas-py2.x-sid-sparc', sparc_slaves_sid),
