RF: add force schedulers to all builders

--- a/master.cfg
+++ b/master.cfg
@@ -63,12 +63,15 @@ from buildbot.locks import MasterLock
 from buildbot.buildslave import BuildSlave
 from buildbot.changes.gitpoller import GitPoller
 from buildbot.schedulers.filter import ChangeFilter
-from buildbot.schedulers.forcesched import ForceScheduler
+from buildbot.schedulers.forcesched import (ForceScheduler,
+                                            FixedParameter,
+                                            ChoiceStringParameter,
+                                            StringParameter)
 from buildbot.schedulers.basic import SingleBranchScheduler
 from buildbot.schedulers import timed
 from buildbot.process.factory import BuildFactory
 from buildbot.steps.source import Git
-from buildbot.steps.shell import ShellCommand, SetProperty
+from buildbot.steps.shell import ShellCommand, SetPropertyFromCommand
 from buildbot.steps.transfer import FileDownload, DirectoryUpload
 from buildbot.process.properties import WithProperties
 from buildbot.config import BuilderConfig
@@ -269,10 +272,10 @@ class GithubBot(object):
         # Now we need the venv binary directory
         factory.addStep(FileDownload('slave_scripts/bs_tools.py',
                                      'bs_tools.py'))
-        factory.addStep(SetProperty(command=shlex.split(
+        factory.addStep(SetPropertyFromCommand(command=shlex.split(
             'python bs_tools.py path-prepend-str venv'),
             property='venv_script_dir'))
-        factory.addStep(SetProperty(command=shlex.split(
+        factory.addStep(SetPropertyFromCommand(command=shlex.split(
             'python bs_tools.py abspath venv'),
             property='venv_dir'))
         # Set env, with virtualenv in front of the path
@@ -283,7 +286,7 @@ class GithubBot(object):
         self._pip_install(factory, pip_depends, my_env)
         # Work out working directory for install
         if not self.src_subdir is None:
-            factory.addStep(SetProperty(command=[
+            factory.addStep(SetPropertyFromCommand(command=[
                 'python', 'bs_tools.py', 'abspath', self.src_subdir],
                 property='src_path'))
             build_workdir = WithProperties("%(src_path)s")
@@ -352,7 +355,7 @@ class GithubBot(object):
             my_python = python
             # Insert virtualenv into PYTHONPATH for building using virtualenv
             # dependencies
-            factory.addStep(SetProperty(command=shlex.split(
+            factory.addStep(SetPropertyFromCommand(command=shlex.split(
                 'python bs_tools.py get-python-lib'),
                 property='venv_python_lib', env=env))
             build_env = env.copy()
@@ -366,7 +369,7 @@ class GithubBot(object):
                 command=[my_python, 'setup.py', 'bdist_mpkg'],
                 env=build_env,
                 workdir=build_workdir))
-            factory.addStep(SetProperty(command=shlex.split(
+            factory.addStep(SetPropertyFromCommand(command=shlex.split(
                 'python bs_tools.py glob dist "*.egg"'),
                 property='bdist_file'))
         elif bdist_type == 'exe':
@@ -374,7 +377,7 @@ class GithubBot(object):
                 command=[my_python, 'setup.py', 'bdist', '--formats=wininst'],
                 env=build_env,
                 workdir=build_workdir))
-            factory.addStep(SetProperty(command=shlex.split(
+            factory.addStep(SetPropertyFromCommand(command=shlex.split(
                 'python bs_tools.py glob dist "*.exe"'),
                 property='bdist_file'))
         else:
@@ -786,11 +789,6 @@ c['schedulers'] = [
                                   'exe-26', 5, 30, True),
     sympy_bot.nightly_scheduler(['sympy-bdist64-27'],
                                   'exe64-27', 5, 30, True),
-    # Force schedulers for stuff we don't have other schedulers for
-    ForceScheduler(name="dipy-release", builderNames=["dipy-release-checks"]),
-    ForceScheduler(name="nipy-release", builderNames=["nipy-release-checks"]),
-    ForceScheduler(name="nipy-examples",
-                   builderNames=["nipy-examples-2.6", 'nipy-examples-3.3']),
 ]
 
 # Some factories
@@ -1322,6 +1320,11 @@ c['builders'] += sympy_bot.build_builders(
 for b in c['builders']:
     b.category = b.name.split('-')[0]
 
+# Add force scheduler to all builders
+for b in c['builders']:
+    c['schedulers'].append(ForceScheduler(name=b.name, builderNames=[b.name]))
+
+
 ####### STATUS TARGETS
 
 # 'status' is a list of Status Targets. The results of each build will be
@@ -1332,8 +1335,6 @@ c['status'] = []
 
 from buildbot.status import html, mail
 from buildbot.status.web import auth, authz
-
-c['status'] = []
 
 mn = mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
                       mode='failing',
