RF: don't upload bdists if tests failed

--- a/master.cfg
+++ b/master.cfg
@@ -387,8 +387,12 @@ class GithubBot(object):
             command=[ 'easy_install', WithProperties('%(bdist_file)s')],
             env=env))
         # Test
-        factory.addStep(ShellCommand(command=test_cmd,
-            env=env, workdir=workdir))
+        factory.addStep(
+            ShellCommand(
+                command=test_cmd,
+                env=env,
+                workdir=workdir,
+                haltOnFailure=True))
         # Upload
         factory.addStep(DirectoryUpload(slavesrc="dist",
                 masterdest="public_html/" + self.download_dir))
