RF: test a build trigger by http

--- a/master.cfg
+++ b/master.cfg
@@ -1348,6 +1348,14 @@ mn = mail.MailNotifier(fromaddr="buildbot@nipy.bic.berkeley.edu",
 
 c['status'].append(mn)
 
+# Allow builds to be triggered via the web forms
+release_filter = ChangeFilter(category="release")
+rel_sched = SingleBranchScheduler(name="Release",
+                                  change_filter=release_filter,
+                                  builderNames=['nibabel-py2.7-osx-10.8']
+                                 )
+c['schedulers'].append(rel_sched)
+
 http_auth = auth.HTPasswdAuth('bot_htpasswd')
 
 authz_cfg=authz.Authz(
@@ -1362,9 +1370,11 @@ authz_cfg=authz.Authz(
     stopAllBuilds = False,
     cancelPendingBuild = False,
 )
-c['status'].append(html.WebStatus(http_port=8010, authz=authz_cfg,
-                                  #change_hook_dialects={ 'base': True, 'github' : True }
-                  ))
+c['status'].append(html.WebStatus(
+    http_port=8010,
+    authz=authz_cfg,
+    change_hook_dialects={'base': True}
+))
 
 ####### PROJECT IDENTITY
 # the 'title' string will appear at the top of this buildbot
