RF: update to master-side source steps

--- a/master.cfg
+++ b/master.cfg
@@ -70,7 +70,7 @@ from buildbot.schedulers.forcesched import (ForceScheduler,
 from buildbot.schedulers.basic import SingleBranchScheduler
 from buildbot.schedulers import timed
 from buildbot.process.factory import BuildFactory
-from buildbot.steps.source import Git
+from buildbot.steps.source.git import Git
 from buildbot.steps.shell import ShellCommand, SetPropertyFromCommand
 from buildbot.steps.transfer import FileDownload, DirectoryUpload
 from buildbot.process.properties import WithProperties
@@ -260,7 +260,7 @@ class GithubBot(object):
         if pip_depends is None:
             pip_depends = self.pip_depends
         factory = BuildFactory()
-        factory.addStep(Git(repourl=self.git_url, mode='copy', retry=(15, 5)))
+        factory.addStep(Git(repourl=self.git_url, mode='full', retry=(15, 5)))
         # Obviously requires virtualenv on the slave
         venv_params = ['--distribute', '--system-site-packages', 'venv']
         if not python is None:
@@ -801,7 +801,7 @@ def factory_buildout_nibabel(python='python2.6',numpy='1.6.1'):
     f = BuildFactory()
     # check out the source
     # XXX: the mastersrc should make appropriate changes based on numpy version
-    f.addStep(Git(repourl='git://github.com/nipy/nibabel.git', mode='copy'))
+    f.addStep(Git(repourl='git://github.com/nipy/nibabel.git', mode='full'))
     f.addStep(FileDownload(mastersrc="bootstrap.py",
                                           slavedest="bootstrap.py"))
     f.addStep(FileDownload(mastersrc="nibabel_buildout.cfg",
@@ -819,7 +819,7 @@ def shell_cmd_factory(git_url, cmds, posix=True):
     factory = BuildFactory()
     factory.addStep(Git(
         repourl=git_url,
-        mode='copy', retry=(15, 5)))
+        mode='full', retry=(15, 5)))
     for cmd in cmds:
         factory.addStep(ShellCommand(command=shlex.split(cmd, posix=posix)))
     return factory
@@ -829,7 +829,7 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
     factory = BuildFactory()
     factory.addStep(Git(
         repourl=git_url,
-        mode='copy', retry=(15, 5)))
+        mode='full', retry=(15, 5)))
     # Touch c files to make sure build doesn't fail because of c file checkout
     # times
     factory.addStep(ShellCommand(command=shlex.split(
