RF: use newer Interpolate properties class

--- a/master.cfg
+++ b/master.cfg
@@ -73,7 +73,7 @@ from buildbot.process.factory import BuildFactory
 from buildbot.steps.source.git import Git
 from buildbot.steps.shell import ShellCommand, SetPropertyFromCommand
 from buildbot.steps.transfer import FileDownload, DirectoryUpload
-from buildbot.process.properties import WithProperties
+from buildbot.process.properties import Interpolate
 from buildbot.config import BuilderConfig
 
 # This is the dictionary that the buildmaster pays attention to. We also use
@@ -279,8 +279,8 @@ class GithubBot(object):
             'python bs_tools.py abspath venv'),
             property='venv_dir'))
         # Set env, with virtualenv in front of the path
-        my_env={'PATH': WithProperties("%(venv_script_dir)s${PATH}")}
-        workdir = WithProperties("%(venv_dir)s")
+        my_env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
+        workdir = Interpolate("%(prop:venv_dir)s")
         # Add install and runtime dependencies
         self._easy_install(factory, easy_depends, my_env)
         self._pip_install(factory, pip_depends, my_env)
@@ -289,7 +289,7 @@ class GithubBot(object):
             factory.addStep(SetPropertyFromCommand(command=[
                 'python', 'bs_tools.py', 'abspath', self.src_subdir],
                 property='src_path'))
-            build_workdir = WithProperties("%(src_path)s")
+            build_workdir = Interpolate("%(prop:src_path)s")
         else:
             build_workdir = None
         return factory, my_env, workdir, build_workdir
@@ -359,7 +359,7 @@ class GithubBot(object):
                 'python bs_tools.py get-python-lib'),
                 property='venv_python_lib', env=env))
             build_env = env.copy()
-            build_env['PYTHONPATH'] = WithProperties("%(venv_python_lib)s")
+            build_env['PYTHONPATH'] = Interpolate("%(prop:venv_python_lib)s")
         if bdist_type == 'egg':
             factory.addStep(ShellCommand(
                 command=[my_python, 'setup.py', 'bdist_egg'],
@@ -384,7 +384,7 @@ class GithubBot(object):
             raise ValueError('What is this?: ' + bdist_type)
         # Install into virtualenv
         factory.addStep(ShellCommand(
-            command=[ 'easy_install', WithProperties('%(bdist_file)s')],
+            command=[ 'easy_install', Interpolate('%(prop:bdist_file)s')],
             env=env))
         # Test
         factory.addStep(
@@ -842,7 +842,8 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
     # Install into virtualenv
     factory.addStep(
         ShellCommand(command=[python_cmd, 'setup.py', 'install'],
-            env={'PATH': WithProperties("%(workdir)s/build/venv/bin:${PATH}")}
+                     env={'PATH':
+                          Interpolate("%(prop:workdir)s/build/venv/bin:${PATH}")}
             ))
     # Make directory for examples
     factory.addStep(
@@ -855,7 +856,7 @@ def example_factory(git_url, py_path, out_dir, python_cmd='python'):
             '../examples',
             '--log-path=../eg_logs'],
             workdir=r'build/venv',
-            env={'PATH': WithProperties("%(workdir)s/build/venv/bin:${PATH}")}
+            env={'PATH': Interpolate("%(prop:workdir)s/build/venv/bin:${PATH}")}
             ))
     # Upload logs
     factory.addStep(DirectoryUpload(slavesrc="eg_logs",
