NF: attempt triggering scheduler for sympy

--- a/master.cfg
+++ b/master.cfg
@@ -69,11 +69,13 @@ from buildbot.schedulers.forcesched import (ForceScheduler,
                                             StringParameter)
 from buildbot.schedulers.basic import SingleBranchScheduler
 from buildbot.schedulers import timed
+from buildbot.schedulers.triggerable import Triggerable
 from buildbot.process.factory import BuildFactory
 from buildbot.steps.source.git import Git
 from buildbot.steps.shell import ShellCommand, SetPropertyFromCommand
 from buildbot.steps.transfer import FileDownload, DirectoryUpload
-from buildbot.process.properties import Interpolate
+from buildbot.steps.trigger import Trigger
+from buildbot.process.properties import Property, Interpolate
 from buildbot.config import BuilderConfig
 
 # This is the dictionary that the buildmaster pays attention to. We also use
@@ -250,6 +252,26 @@ class GithubBot(object):
             factory.addStep(ShellCommand(command=cmd + list(pkg_spec),
                         env=env))
 
+    def _make_virtualenv(self, factory, python=None):
+        # Obviously requires virtualenv on the slave
+        venv_params = ['--distribute', '--system-site-packages', 'venv']
+        if not python is None:
+            venv_params = ['--python=' + python] + venv_params
+        factory.addStep(ShellCommand(command=['virtualenv'] + venv_params))
+        # Now we need the venv binary directory
+        factory.addStep(FileDownload('slave_scripts/bs_tools.py',
+                                     'bs_tools.py'))
+        factory.addStep(SetPropertyFromCommand(command=shlex.split(
+            'python bs_tools.py path-prepend-str venv'),
+            property='venv_script_dir'))
+        factory.addStep(SetPropertyFromCommand(command=shlex.split(
+            'python bs_tools.py abspath venv'),
+            property='venv_dir'))
+        # Set env, with virtualenv in front of the path
+        env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
+        workdir = Interpolate("%(prop:venv_dir)s")
+        return env, workdir
+
     def _code_build_factory(self,
                             python=None,
                             easy_depends=None,
@@ -261,26 +283,11 @@ class GithubBot(object):
             pip_depends = self.pip_depends
         factory = BuildFactory()
         factory.addStep(Git(repourl=self.git_url, mode='full', retry=(15, 5)))
-        # Obviously requires virtualenv on the slave
-        venv_params = ['--distribute', '--system-site-packages', 'venv']
-        if not python is None:
-            venv_params = ['--python=' + python] + venv_params
-        factory.addStep(ShellCommand(command=['virtualenv'] + venv_params))
+        # Make virtualenv, return environment, workdir of venv
+        my_env, workdir = self._make_virtualenv(factory, python)
         # Any pre-building commands
         for cmd in pre_build_cmds:
             factory.addStep(ShellCommand(command=cmd))
-        # Now we need the venv binary directory
-        factory.addStep(FileDownload('slave_scripts/bs_tools.py',
-                                     'bs_tools.py'))
-        factory.addStep(SetPropertyFromCommand(command=shlex.split(
-            'python bs_tools.py path-prepend-str venv'),
-            property='venv_script_dir'))
-        factory.addStep(SetPropertyFromCommand(command=shlex.split(
-            'python bs_tools.py abspath venv'),
-            property='venv_dir'))
-        # Set env, with virtualenv in front of the path
-        my_env={'PATH': Interpolate("%(prop:venv_script_dir)s${PATH}")}
-        workdir = Interpolate("%(prop:venv_dir)s")
         # Add install and runtime dependencies
         self._easy_install(factory, easy_depends, my_env)
         self._pip_install(factory, pip_depends, my_env)
@@ -1023,24 +1030,58 @@ sympy_test_cmd = ['python', '-c',
                   't=sympy.test(); '
                   'sys.exit(not (dt and t))']
 pip_deps = ('nose',)
-c['builders'].append(BuilderConfig(
-    name='sympy-bdist32-27',
-    slavenames=xp_32_slaves,
-    factory=sympy_bot.bdist_factory(
+for slavenames, bdist_suffix in (
+    (xp_32_slaves, '32'),
+    (win7_64_slaves, '64')):
+    py2_name = 'sympy-bdist{0}-27'.format(bdist_suffix)
+    py3_name = 'sympy-bdist{0}-33'.format(bdist_suffix)
+    factory = sympy_bot.bdist_factory(
         'exe',
         test_cmd = sympy_test_cmd,
         pip_depends = pip_deps,
         python = r'c:\Python27\python.exe')
-))
-c['builders'].append(BuilderConfig(
-    name='sympy-bdist64-27',
-    slavenames=win7_64_slaves,
-    factory=sympy_bot.bdist_factory(
-        'exe',
-        test_cmd = sympy_test_cmd,
-        pip_depends = pip_deps,
-        python = r'c:\Python27\python.exe')
-))
+    factory.addStep(
+        Trigger(schedulerNames=[py3_name],
+                updateSourceStamp=True,
+                set_properties={'bdist_file' : Property('bdist_file')}
+            ))
+    c['builders'].append(BuilderConfig(
+        name=py2_name,
+        slavenames=slavenames,
+        factory=factory))
+    # Make triggerable scheduler
+    sympy_py3_bdist = Triggerable(name=py3_name,
+                                  builderNames=[py3_name])
+    # Make builder for Python 3 bdist test
+    factory = BuildFactory()
+    env, workdir = sympy_bot._make_virtualenv(factory,
+                                              'c:\Python32\python.exe')
+    # Download bdist file
+    factory.addStep(
+        FileDownload(Interpolate(
+            "public_html/" +
+            sympy_bot.download_dir +
+            "/%(prop:bdist_file)s"),
+            Property('bdist_file'))
+            )
+    # easy_install bdist file into virtualenv
+    factory.addStep(ShellCommand(
+        command=['easy_install', Property('bdist_file')],
+        env=env))
+    # pip install nose
+    factory.addStep(ShellCommand(
+        command=['pip', 'install', '--ignore-installed', 'nose'],
+        env=env))
+    # run tests
+    factory.addStep(ShellCommand(
+        command=sympy_test_cmd,
+        env=env,
+        workdir=workdir))
+    c['builders'].append(BuilderConfig(
+        name=py3_name,
+        slavenames=slavenames,
+        factory=factory))
+
 # Add nightly docs builders
 c['builders'] += nipy_bot.build_doc_builders(
     (('nipy-doc-builder', linux_64_slaves),),
